# cpp_server_project

./: .gitignore  CMakeLists.txt  README.md
include/client/: client.hpp
include/common/: database.hpp  logger.hpp  memory_pool.hpp  monitor.hpp  protocol.hpp  ssl_context.hpp
include/server/: server.hpp  session.hpp
src/client/: client.cpp  main.cpp
src/common/: database.cpp  logger.cpp  memory_pool.cpp  monitor.cpp  protocol.cpp  ssl_context.cpp
src/server/: main.cpp  server.cpp  session.cpp
